make new structures with stubs
